--- a/css/website.css
+++ b/css/website.css
@@ -2586,11 +2586,9 @@ footer .container .mail a {
     color:#d80935}
 
 .contact-social {
-    border-top:1px solid #f0f0f0;
     color:#4c4c4c;
     font-size:12px;
     font-weight:bold;
-    padding-top:10px;
     margin-top:15px}
 
 .contact-social div {
@@ -3624,4 +3622,8 @@ ol li ol {margin-left:20px;}
 
 #logo {
     width:40%;
+}
+
+.social-icon {
+    width:20% !important;
 }
