--- a/metro/Style/jq-metro.css
+++ b/metro/Style/jq-metro.css
@@ -13,6 +13,7 @@
     cursor:pointer;
     float:left;
     font-family: "Segoe UI Light","Segoe UI",Verdana, Tahoma, Arial;
+    width:150px;
 }
 
 .metro:hover {
@@ -24,7 +25,7 @@ opacity: 0.8;
     clear:both;
 	height:138px;
 	margin:0px auto;
-    width:80%;
+    width: 310px;
     text-align:center;
 }
 
@@ -38,11 +39,19 @@ opacity: 0.8;
     position:relative;
 }
 
+#bt3{
+    margin-right:0px !important;
+}
+
+#bt4{
+    margin-right:0px !important;
+}
+
 .metro .imgsimple img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 35%;
 }
 
 .metro .imgdouble {
@@ -83,7 +92,7 @@ opacity: 0.8;
 }
 
 .metrosingle {
-    width:46%;
+    #width:46%;
 }
 
 .metrodouble {
